all form commands work correct

--- a/Client_App/Views/Forms/Forms1/Form_15.axaml
+++ b/Client_App/Views/Forms/Forms1/Form_15.axaml
@@ -16,6 +16,7 @@
     d:DesignWidth="900"
     x:DataType="vm:Form_15VM"
     mc:Ignorable="d"
+    KeyUp="DataGrid_KeyUp"
 	x:Name="1.5"
 	WindowStartupLocation="CenterScreen"
 	MinWidth="800" MinHeight="600">
@@ -153,58 +154,49 @@
 		<ScrollViewer Classes="tableScrollViewer" Grid.Row="1">
 			<Grid x:Name="Table" RowDefinitions="Auto,*" ColumnDefinitions="Auto">
 				<Grid.ContextMenu>
-					<ContextMenu DataContext="{Binding DataContext, ElementName=dataGrid}">
-						<MenuItem Header="Выделить всё"
+                    <ContextMenu x:CompileBindings="True"
+                                 x:DataType="vm:Form_15VM"
+                                 DataContext="{Binding DataContext, ElementName=dataGrid}">
+                        <MenuItem Header="Выделить всё"
                                   Command="{Binding SelectAll}"
                                   IsHitTestVisible="True"
-                                  InputGesture="Ctrl+A"
-                                  HotKey="Ctrl+A"/>
+                                  InputGesture="Ctrl+A"/>
                         <MenuItem Header="Добавить строку"
                                   Command="{Binding AddRow}"
-                                  InputGesture="Ctrl+T"
-                                  HotKey="Ctrl+T"/>
+                                  InputGesture="Ctrl+T"/>
                         <MenuItem Header="Добавить N строк"
                                   Command="{Binding AddRows}"
-                                  InputGesture="Ctrl+N"
-                                  HotKey="Ctrl+N"/>
+                                  InputGesture="Ctrl+N"/>
                         <MenuItem Header="Добавить N строк перед"
                                   Command="{Binding AddRowsIn}"
                                   CommandParameter="{Binding SelectedForms}"
-                                  InputGesture="Ctrl+I"
-                                  HotKey="Ctrl+I"/>
+                                  InputGesture="Ctrl+I"/>
                         <MenuItem Header="Копировать"
                                   Command="{Binding CopyRows}"
                                   CommandParameter="{Binding SelectedForms}"
-                                  InputGesture="Ctrl+C"
-                                  HotKey="Ctrl+C"/>
+                                  InputGesture="Ctrl+C"/>
                         <MenuItem Header="Вставить"
                                   Command="{Binding PasteRows}"
-                                  InputGesture="Ctrl+V"
-                                  HotKey="Ctrl+V"/>
+                                  InputGesture="Ctrl+V"/>
                         <MenuItem Header="Удалить выбранные строчки"
                                   Command="{Binding DeleteRows}"
                                   CommandParameter="{Binding SelectedForms}"
-                                  InputGesture="Ctrl+D"
-                                  HotKey="Ctrl+D"/>
+                                  InputGesture="Ctrl+D"/>
                         <MenuItem Header="Выставить номер"
                                   Command="{Binding SetNumberOrder}"
-                                  InputGesture="Ctrl+O"
-                                  HotKey="Ctrl+O"/>
-                        <!--<MenuItem Header="Сортировать по номеру п/п"
+                                  InputGesture="Ctrl+O"/>
+                        <!--<MenuItem Header="Сортировать по номеру п/п	Ctrl+L"
                                       Command="{Binding SortForms}"
-                                      InputGesture="Ctrl+L"
-                                      HotKey="Ctrl+L"/>-->
+                                      HotKey="Ctrl+L"/> -->
                         <MenuItem Header="Очистить строчки"
                                   Command="{Binding DeleteDataInRows}"
                                   CommandParameter="{Binding SelectedForms}"
-                                  InputGesture="Ctrl+K"
-                                  HotKey="Ctrl+K"/>
-                        <MenuItem Header="Перевести РВ в РАО"
-                                  Command="{Binding SourceTransmission}"
-                                  CommandParameter="{Binding SelectedForm}"
-                                  InputGesture="Ctrl+J"
-                                  HotKey="Ctrl+J"/>
-					</ContextMenu>
+                                  InputGesture="Ctrl+K"/>
+                        <MenuItem Header="Выгрузка истории движения источника"
+                                  Command="{Binding ExcelExportSourceMovementHistory}"
+                                  CommandParameter="{Binding SelectedForms}"
+                                  InputGesture="Ctrl+E"/>
+                    </ContextMenu>
 				</Grid.ContextMenu>
 				<Grid Classes="tableHeader" Grid.Row="0"
 					  Width="{Binding ElementName=dataGrid.Width}"
@@ -329,6 +321,7 @@
 				<DataGrid
 					Grid.Row="1"
 					Classes="table"
+					x:CompileBindings="True"
 					x:Name="dataGrid"
 					Items="{Binding FormList}"
 					SelectedItem="{Binding SelectedForm}">
@@ -343,8 +336,7 @@
 						<DataGridTextColumn Binding="{Binding NumberInOrder.Value}"
 											Width="40"
 											IsReadOnly="True"
-											x:CompileBindings="True"
-										x:DataType="forms1:Form15">
+										    x:DataType="forms1:Form15">
 							<DataGridTextColumn.HeaderTemplate>
 								<DataTemplate>
 									<Border Classes="headerTemplate">
@@ -369,7 +361,7 @@
 								</DataTemplate>
 							</DataGridTemplateColumn.HeaderTemplate>
 							<DataGridTemplateColumn.CellTemplate>
-								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form15">
+								<DataTemplate x:DataType="forms1:Form15">
 									<TextBox Text="{Binding OperationCode.Value, Mode=TwoWay}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
@@ -387,11 +379,12 @@
 								</DataTemplate>
 							</DataGridTemplateColumn.HeaderTemplate>
 							<DataGridTemplateColumn.CellTemplate>
-								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form15">
+								<DataTemplate x:DataType="forms1:Form15">
 									<Grid ColumnDefinitions="*,Auto">
 										<TextBox Grid.Column="0" Text="{Binding OperationDate.Value, Mode=TwoWay}"/>
 										<CalendarDatePicker Classes="buttonOnly"  Grid.Column="1"
-															SelectedDate="{Binding OperationDate.Value, Mode=TwoWay, Converter={StaticResource DateConverter}}"/>
+															SelectedDate="{Binding OperationDate.Value, Mode=TwoWay, 
+                                                            Converter={StaticResource DateConverter}}"/>
 									</Grid>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
@@ -409,7 +402,7 @@
 								</DataTemplate>
 							</DataGridTemplateColumn.HeaderTemplate>
 							<DataGridTemplateColumn.CellTemplate>
-								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form15">
+								<DataTemplate x:DataType="forms1:Form15">
 									<TextBox Text="{Binding PassportNumber.Value, Mode=TwoWay}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
@@ -427,7 +420,7 @@
 								</DataTemplate>
 							</DataGridTemplateColumn.HeaderTemplate>
 							<DataGridTemplateColumn.CellTemplate>
-								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form15">
+								<DataTemplate x:DataType="forms1:Form15">
 									<TextBox Text="{Binding Type.Value, Mode=TwoWay}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
@@ -445,7 +438,7 @@
 								</DataTemplate>
 							</DataGridTemplateColumn.HeaderTemplate>
 							<DataGridTemplateColumn.CellTemplate>
-								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form15">
+								<DataTemplate x:DataType="forms1:Form15">
 									<TextBox Text="{Binding Radionuclids.Value, Mode=TwoWay}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
@@ -463,7 +456,7 @@
 								</DataTemplate>
 							</DataGridTemplateColumn.HeaderTemplate>
 							<DataGridTemplateColumn.CellTemplate>
-								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form15">
+								<DataTemplate x:DataType="forms1:Form15">
 									<TextBox Text="{Binding FactoryNumber.Value, Mode=TwoWay}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
@@ -481,7 +474,7 @@
 								</DataTemplate>
 							</DataGridTemplateColumn.HeaderTemplate>
 							<DataGridTemplateColumn.CellTemplate>
-								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form15">
+								<DataTemplate x:DataType="forms1:Form15">
 									<TextBox Text="{Binding Quantity.Value, Mode=TwoWay}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
@@ -499,7 +492,7 @@
 								</DataTemplate>
 							</DataGridTemplateColumn.HeaderTemplate>
 							<DataGridTemplateColumn.CellTemplate>
-								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form15">
+								<DataTemplate x:DataType="forms1:Form15">
 									<TextBox Text="{Binding Activity.Value, Mode=TwoWay}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
@@ -517,11 +510,12 @@
 								</DataTemplate>
 							</DataGridTemplateColumn.HeaderTemplate>
 							<DataGridTemplateColumn.CellTemplate>
-								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form15">
+								<DataTemplate x:DataType="forms1:Form15">
 									<Grid ColumnDefinitions="*,Auto">
 										<TextBox Grid.Column="0" Text="{Binding CreationDate.Value, Mode=TwoWay}"/>
 										<CalendarDatePicker Classes="buttonOnly"  Grid.Column="1"
-															SelectedDate="{Binding CreationDate.Value, Mode=TwoWay, Converter={StaticResource DateConverter}}"/>
+															SelectedDate="{Binding CreationDate.Value, Mode=TwoWay, 
+                                                            Converter={StaticResource DateConverter}}"/>
 									</Grid>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
@@ -539,7 +533,7 @@
 								</DataTemplate>
 							</DataGridTemplateColumn.HeaderTemplate>
 							<DataGridTemplateColumn.CellTemplate>
-								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form15">
+								<DataTemplate x:DataType="forms1:Form15">
 									<TextBox Text="{Binding StatusRAO.Value, Mode=TwoWay}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
@@ -557,7 +551,7 @@
 								</DataTemplate>
 							</DataGridTemplateColumn.HeaderTemplate>
 							<DataGridTemplateColumn.CellTemplate>
-								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form13">
+								<DataTemplate x:DataType="forms1:Form15">
 									<TextBox Text="{Binding DocumentVid.Value, Mode=TwoWay}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
@@ -575,7 +569,7 @@
 								</DataTemplate>
 							</DataGridTemplateColumn.HeaderTemplate>
 							<DataGridTemplateColumn.CellTemplate>
-								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form13">
+								<DataTemplate x:DataType="forms1:Form15">
 									<TextBox Text="{Binding DocumentNumber.Value, Mode=TwoWay}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
@@ -593,11 +587,12 @@
 								</DataTemplate>
 							</DataGridTemplateColumn.HeaderTemplate>
 							<DataGridTemplateColumn.CellTemplate>
-								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form13">
+								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form15">
 									<Grid ColumnDefinitions="*,Auto">
 										<TextBox Grid.Column="0" Text="{Binding DocumentDate.Value, Mode=TwoWay}"/>
 										<CalendarDatePicker Classes="buttonOnly"  Grid.Column="1"
-															SelectedDate="{Binding DocumentDate.Value, Mode=TwoWay, Converter={StaticResource DateConverter}}"/>
+															SelectedDate="{Binding DocumentDate.Value, Mode=TwoWay, 
+                                                            Converter={StaticResource DateConverter}}"/>
 									</Grid>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
@@ -615,7 +610,7 @@
 								</DataTemplate>
 							</DataGridTemplateColumn.HeaderTemplate>
 							<DataGridTemplateColumn.CellTemplate>
-								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form15">
+								<DataTemplate x:DataType="forms1:Form15">
 									<TextBox Text="{Binding ProviderOrRecieverOKPO.Value, Mode=TwoWay}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
@@ -633,7 +628,7 @@
 								</DataTemplate>
 							</DataGridTemplateColumn.HeaderTemplate>
 							<DataGridTemplateColumn.CellTemplate>
-								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form15">
+								<DataTemplate x:DataType="forms1:Form15">
 									<TextBox Text="{Binding TransporterOKPO.Value, Mode=TwoWay}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
@@ -651,7 +646,7 @@
 								</DataTemplate>
 							</DataGridTemplateColumn.HeaderTemplate>
 							<DataGridTemplateColumn.CellTemplate>
-								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form15">
+								<DataTemplate x:DataType="forms1:Form15">
 									<TextBox Text="{Binding PackName.Value, Mode=TwoWay}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
@@ -669,7 +664,7 @@
 								</DataTemplate>
 							</DataGridTemplateColumn.HeaderTemplate>
 							<DataGridTemplateColumn.CellTemplate>
-								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form15">
+								<DataTemplate x:DataType="forms1:Form15">
 									<TextBox Text="{Binding PackType.Value, Mode=TwoWay}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
@@ -687,7 +682,7 @@
 								</DataTemplate>
 							</DataGridTemplateColumn.HeaderTemplate>
 							<DataGridTemplateColumn.CellTemplate>
-								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form15">
+								<DataTemplate x:DataType="forms1:Form15">
 									<TextBox Text="{Binding PackNumber.Value, Mode=TwoWay}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
@@ -705,7 +700,7 @@
 								</DataTemplate>
 							</DataGridTemplateColumn.HeaderTemplate>
 							<DataGridTemplateColumn.CellTemplate>
-								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form15">
+								<DataTemplate x:DataType="forms1:Form15">
 									<TextBox Text="{Binding StoragePlaceName.Value, Mode=TwoWay}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
@@ -723,7 +718,7 @@
 								</DataTemplate>
 							</DataGridTemplateColumn.HeaderTemplate>
 							<DataGridTemplateColumn.CellTemplate>
-								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form15">
+								<DataTemplate x:DataType="forms1:Form15">
 									<TextBox Text="{Binding StoragePlaceCode.Value, Mode=TwoWay}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
@@ -741,7 +736,7 @@
 								</DataTemplate>
 							</DataGridTemplateColumn.HeaderTemplate>
 							<DataGridTemplateColumn.CellTemplate>
-								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form15">
+								<DataTemplate x:DataType="forms1:Form15">
 									<TextBox Text="{Binding RefineOrSortRAOCode.Value, Mode=TwoWay}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
@@ -759,7 +754,7 @@
 								</DataTemplate>
 							</DataGridTemplateColumn.HeaderTemplate>
 							<DataGridTemplateColumn.CellTemplate>
-								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form15">
+								<DataTemplate x:DataType="forms1:Form15">
 									<TextBox Text="{Binding Subsidy.Value, Mode=TwoWay}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
@@ -777,7 +772,7 @@
 								</DataTemplate>
 							</DataGridTemplateColumn.HeaderTemplate>
 							<DataGridTemplateColumn.CellTemplate>
-								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form15">
+								<DataTemplate x:DataType="forms1:Form15">
 									<TextBox Text="{Binding FcpNumber.Value, Mode=TwoWay}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
@@ -795,7 +790,7 @@
 								</DataTemplate>
 							</DataGridTemplateColumn.HeaderTemplate>
 							<DataGridTemplateColumn.CellTemplate>
-								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form15">
+								<DataTemplate x:DataType="forms1:Form15">
 									<TextBox Text="{Binding ContractNumber.Value, Mode=TwoWay}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
@@ -845,7 +840,7 @@
 			<Border Classes="notesContainer">
 				<StackPanel>
 					<StackPanel.ContextMenu>
-						<ContextMenu>
+						<ContextMenu x:CompileBindings="True" x:DataType="vm:Form_15VM">
 							<MenuItem Header="Добавить строку"
 									  Command="{Binding AddNote}"/>
 							<MenuItem Header="Добавить N строк"
@@ -862,6 +857,7 @@
 					</StackPanel.ContextMenu>
 					<TextBlock Margin="5">Примечания</TextBlock>
 					<DataGrid Classes="notesTable"
+							  x:CompileBindings="True"
 							  Items="{Binding NoteList}"
 							  SelectedItem="{Binding SelectedNote}">
 						<interactivity:Interaction.Behaviors>
@@ -872,7 +868,7 @@
 						<DataGrid.Columns>
 							<DataGridTemplateColumn Header="№ строки" Width="80">
 								<DataGridTemplateColumn.CellTemplate>
-									<DataTemplate x:CompileBindings="True" x:DataType="forms:Note">
+									<DataTemplate x:DataType="forms:Note">
 										<TextBox Text="{Binding RowNumber.Value, Mode=TwoWay}"/>
 									</DataTemplate>
 								</DataGridTemplateColumn.CellTemplate>
@@ -880,7 +876,7 @@
 
 							<DataGridTemplateColumn Header="№ графы" Width="80">
 								<DataGridTemplateColumn.CellTemplate>
-									<DataTemplate x:CompileBindings="True" x:DataType="forms:Note">
+									<DataTemplate x:DataType="forms:Note">
 										<TextBox Text="{Binding GraphNumber.Value, Mode=TwoWay}"/>
 									</DataTemplate>
 								</DataGridTemplateColumn.CellTemplate>
@@ -888,7 +884,7 @@
 
 							<DataGridTemplateColumn Header="Пояснения" Width="*">
 								<DataGridTemplateColumn.CellTemplate>
-									<DataTemplate x:CompileBindings="True" x:DataType="forms:Note">
+									<DataTemplate x:DataType="forms:Note">
 										<TextBox Text="{Binding Comment.Value, Mode=TwoWay}"/>
 									</DataTemplate>
 								</DataGridTemplateColumn.CellTemplate>
