--- a/Client_App/Views/Forms/Forms1/Form_19.axaml
+++ b/Client_App/Views/Forms/Forms1/Form_19.axaml
@@ -16,6 +16,7 @@
     d:DesignWidth="900"
     x:DataType="vm:Form_19VM"
     mc:Ignorable="d"
+    KeyUp="DataGrid_KeyUp"
 	x:Name="1.9"
 	WindowStartupLocation="CenterScreen"
 	MinWidth="800" MinHeight="600">
@@ -152,57 +153,44 @@
 			<ScrollViewer Classes="tableScrollViewer" Grid.Row="1">
 				<Grid x:Name="Table" RowDefinitions="Auto,*" ColumnDefinitions="Auto">
                     <Grid.ContextMenu>
-                        <ContextMenu DataContext="{Binding DataContext, ElementName=dataGrid}">
+                        <ContextMenu x:CompileBindings="True"
+                                     x:DataType="vm:Form_19VM"
+                                     DataContext="{Binding DataContext, ElementName=dataGrid}">
                             <MenuItem Header="Выделить всё"
                                       Command="{Binding SelectAll}"
                                       IsHitTestVisible="True"
-                                      InputGesture="Ctrl+A"
-                                      HotKey="Ctrl+A"/>
+                                      InputGesture="Ctrl+A"/>
                             <MenuItem Header="Добавить строку"
                                       Command="{Binding AddRow}"
-                                      InputGesture="Ctrl+T"
-                                      HotKey="Ctrl+T"/>
+                                      InputGesture="Ctrl+T"/>
                             <MenuItem Header="Добавить N строк"
                                       Command="{Binding AddRows}"
-                                      InputGesture="Ctrl+N"
-                                      HotKey="Ctrl+N"/>
+                                      InputGesture="Ctrl+N"/>
                             <MenuItem Header="Добавить N строк перед"
                                       Command="{Binding AddRowsIn}"
                                       CommandParameter="{Binding SelectedForms}"
-                                      InputGesture="Ctrl+I"
-                                      HotKey="Ctrl+I"/>
+                                      InputGesture="Ctrl+I"/>
                             <MenuItem Header="Копировать"
                                       Command="{Binding CopyRows}"
                                       CommandParameter="{Binding SelectedForms}"
-                                      InputGesture="Ctrl+C"
-                                      HotKey="Ctrl+C"/>
+                                      InputGesture="Ctrl+C"/>
                             <MenuItem Header="Вставить"
                                       Command="{Binding PasteRows}"
-                                      InputGesture="Ctrl+V"
-                                      HotKey="Ctrl+V"/>
+                                      InputGesture="Ctrl+V"/>
                             <MenuItem Header="Удалить выбранные строчки"
                                       Command="{Binding DeleteRows}"
                                       CommandParameter="{Binding SelectedForms}"
-                                      InputGesture="Ctrl+D"
-                                      HotKey="Ctrl+D"/>
+                                      InputGesture="Ctrl+D"/>
                             <MenuItem Header="Выставить номер"
                                       Command="{Binding SetNumberOrder}"
-                                      InputGesture="Ctrl+O"
-                                      HotKey="Ctrl+O"/>
-                            <!--<MenuItem Header="Сортировать по номеру п/п"
+                                      InputGesture="Ctrl+O"/>
+                            <!--<MenuItem Header="Сортировать по номеру п/п	Ctrl+L"
                                       Command="{Binding SortForms}"
-                                      InputGesture="Ctrl+L"
-                                      HotKey="Ctrl+L"/>-->
+                                      HotKey="Ctrl+L"/> -->
                             <MenuItem Header="Очистить строчки"
                                       Command="{Binding DeleteDataInRows}"
                                       CommandParameter="{Binding SelectedForms}"
-                                      InputGesture="Ctrl+K"
-                                      HotKey="Ctrl+K"/>
-                            <MenuItem Header="Перевести РВ в РАО"
-                                      Command="{Binding SourceTransmission}"
-                                      CommandParameter="{Binding SelectedForm}"
-                                      InputGesture="Ctrl+J"
-                                      HotKey="Ctrl+J"/>
+                                      InputGesture="Ctrl+K"/>
                         </ContextMenu>
                     </Grid.ContextMenu>
                     <Grid Classes="tableHeader" Grid.Row="0"
@@ -259,6 +247,7 @@
 					<DataGrid 
                         Grid.Row="1"
                         Classes="table"
+						x:CompileBindings="True"
 						x:Name="dataGrid"
 						Items="{Binding FormList}"
                         SelectedItem="{Binding SelectedForm}">
@@ -273,7 +262,6 @@
                             <DataGridTextColumn Binding="{Binding NumberInOrder.Value}"
 												Width="40"
                                                 IsReadOnly="True"
-                                                x:CompileBindings="True"
                                                 x:DataType="forms1:Form19">
 								<DataGridTextColumn.HeaderTemplate>
 									<DataTemplate>
@@ -299,7 +287,7 @@
 									</DataTemplate>
 								</DataGridTemplateColumn.HeaderTemplate>
                                 <DataGridTemplateColumn.CellTemplate>
-                                    <DataTemplate x:CompileBindings="True" x:DataType="forms1:Form19">
+                                    <DataTemplate x:DataType="forms1:Form19">
                                         <TextBox Text="{Binding OperationCode.Value, Mode=TwoWay}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
@@ -317,7 +305,7 @@
 									</DataTemplate>
 								</DataGridTemplateColumn.HeaderTemplate>
                                 <DataGridTemplateColumn.CellTemplate>
-                                    <DataTemplate x:CompileBindings="True" x:DataType="forms1:Form19">
+                                    <DataTemplate x:DataType="forms1:Form19">
 										<Grid ColumnDefinitions="*,Auto">
 											<TextBox Grid.Column="0" Text="{Binding OperationDate.Value, Mode=TwoWay}"/>
 											<CalendarDatePicker Classes="buttonOnly"  Grid.Column="1"
@@ -339,7 +327,7 @@
 									</DataTemplate>
 								</DataGridTemplateColumn.HeaderTemplate>
                                 <DataGridTemplateColumn.CellTemplate>
-                                    <DataTemplate x:CompileBindings="True" x:DataType="forms1:Form19">
+                                    <DataTemplate x:DataType="forms1:Form19">
                                         <TextBox Text="{Binding DocumentVid.Value, Mode=TwoWay}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
@@ -357,7 +345,7 @@
 									</DataTemplate>
 								</DataGridTemplateColumn.HeaderTemplate>
                                 <DataGridTemplateColumn.CellTemplate>
-                                    <DataTemplate x:CompileBindings="True" x:DataType="forms1:Form19">
+                                    <DataTemplate x:DataType="forms1:Form19">
                                         <TextBox Text="{Binding DocumentNumber.Value, Mode=TwoWay}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
@@ -375,7 +363,7 @@
 									</DataTemplate>
 								</DataGridTemplateColumn.HeaderTemplate>
                                 <DataGridTemplateColumn.CellTemplate>
-                                    <DataTemplate x:CompileBindings="True" x:DataType="forms1:Form19">
+                                    <DataTemplate x:DataType="forms1:Form19">
 										<Grid ColumnDefinitions="*,Auto">
 											<TextBox Grid.Column="0" Text="{Binding DocumentDate.Value, Mode=TwoWay}"/>
 											<CalendarDatePicker Classes="buttonOnly"  Grid.Column="1"
@@ -397,7 +385,7 @@
 									</DataTemplate>
 								</DataGridTemplateColumn.HeaderTemplate>
                                 <DataGridTemplateColumn.CellTemplate>
-                                    <DataTemplate x:CompileBindings="True" x:DataType="forms1:Form19">
+                                    <DataTemplate x:DataType="forms1:Form19">
                                         <TextBox Text="{Binding CodeTypeAccObject.Value, Mode=TwoWay}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
@@ -415,7 +403,7 @@
 									</DataTemplate>
 								</DataGridTemplateColumn.HeaderTemplate>
                                 <DataGridTemplateColumn.CellTemplate>
-                                    <DataTemplate x:CompileBindings="True" x:DataType="forms1:Form19">
+                                    <DataTemplate x:DataType="forms1:Form19">
                                         <TextBox Text="{Binding Radionuclids.Value, Mode=TwoWay}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
@@ -433,7 +421,7 @@
 									</DataTemplate>
 								</DataGridTemplateColumn.HeaderTemplate>
                                 <DataGridTemplateColumn.CellTemplate>
-                                    <DataTemplate x:CompileBindings="True" x:DataType="forms1:Form19">
+                                    <DataTemplate x:DataType="forms1:Form19">
                                         <TextBox Text="{Binding Activity.Value, Mode=TwoWay}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
@@ -483,7 +471,7 @@
 				<Border Classes="notesContainer">
 					<StackPanel>
 						<StackPanel.ContextMenu>
-							<ContextMenu>
+							<ContextMenu x:CompileBindings="True" x:DataType="vm:Form_19VM">
 								<MenuItem Header="Добавить строку"
 										  Command="{Binding AddNote}"/>
 								<MenuItem Header="Добавить N строк"
@@ -500,6 +488,7 @@
 						</StackPanel.ContextMenu>
 						<TextBlock Margin="5">Примечания</TextBlock>
 						<DataGrid Classes="notesTable"
+								  x:CompileBindings="True"
 								  Items="{Binding NoteList}"
 								  SelectedItem="{Binding SelectedNote}">
 							<interactivity:Interaction.Behaviors>
@@ -510,7 +499,7 @@
 							<DataGrid.Columns>
 								<DataGridTemplateColumn Header="№ строки" Width="80">
 									<DataGridTemplateColumn.CellTemplate>
-										<DataTemplate x:CompileBindings="True" x:DataType="forms:Note">
+										<DataTemplate x:DataType="forms:Note">
 											<TextBox Text="{Binding RowNumber.Value, Mode=TwoWay}"/>
 										</DataTemplate>
 									</DataGridTemplateColumn.CellTemplate>
@@ -518,7 +507,7 @@
 							
 								<DataGridTemplateColumn Header="№ графы" Width="80">
 									<DataGridTemplateColumn.CellTemplate>
-										<DataTemplate x:CompileBindings="True" x:DataType="forms:Note">
+										<DataTemplate x:DataType="forms:Note">
 											<TextBox Text="{Binding GraphNumber.Value, Mode=TwoWay}"/>
 										</DataTemplate>
 									</DataGridTemplateColumn.CellTemplate>
@@ -526,7 +515,7 @@
 							
 								<DataGridTemplateColumn Header="Пояснения" Width="*">
 									<DataGridTemplateColumn.CellTemplate>
-										<DataTemplate x:CompileBindings="True" x:DataType="forms:Note">
+										<DataTemplate x:DataType="forms:Note">
 											<TextBox Text="{Binding Comment.Value, Mode=TwoWay}"/>
 										</DataTemplate>
 									</DataGridTemplateColumn.CellTemplate>
