--- a/Client_App/Views/Forms/Forms1/Form_19.axaml
+++ b/Client_App/Views/Forms/Forms1/Form_19.axaml
@@ -92,15 +92,8 @@
                                     Text="{Binding Path=Report.CorrectionNumber.Value}"></TextBox>
 						    </StackPanel>
 						
-						    <StackPanel Orientation="Horizontal" Grid.Row="3">
-							    <Button Margin="5" Command="{Binding CheckForm}">Проверить</Button>
-							    <Button Margin="5" Command="{Binding SaveReport}">Сохранить</Button>
-						    </StackPanel>
+						   
 
-						    <StackPanel Orientation="Horizontal"  Grid.Row="4">
-							    <TextBlock Margin="5" >Автозаполнение:</TextBlock>
-							    <CheckBox Margin="5" IsChecked="{Binding IsAutoReplaceEnabled}"></CheckBox>
-						    </StackPanel>
 					    </Grid>
 				    </Border>
 
@@ -146,6 +139,15 @@
                                     Content="Скопировать данные предыдущей формы"/>
 					    </Grid>
 				    </Border>
+					<Border Classes="borderContainer">
+						<Grid Margin="5" RowDefinitions="Auto,Auto">
+
+							<StackPanel Grid.Row="1" Orientation="Horizontal">
+								<TextBlock Margin="5" >Автозаполнение:</TextBlock>
+								<CheckBox Margin="5" IsChecked="{Binding IsAutoReplaceEnabled}"></CheckBox>
+							</StackPanel>
+						</Grid>
+					</Border>
 
 			    </WrapPanel>
 		    </Expander>
